fix spacing on messages

--- a/LiveTL/css/frame.css
+++ b/LiveTL/css/frame.css
@@ -235,7 +235,7 @@ label {
 }
 
 .line:last-child {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .message {
